--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   support:
     build: main/
     restart: always
-    port:
+    ports:
       - 80:8080
     hostname: exp.gocrm.ru
     volumes:
