--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,4 +8,4 @@ services:
       - 80:8080
     hostname: exp.gocrm.ru
     volumes:
-      - /Users/krombi/Documents/work/GO/src/support/main/storage:/usr/src/support/storage
+      - ./storage:/usr/src/support/storage
