--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -2,6 +2,9 @@ FROM golang:latest
 
 ENV USR_PATH = /usr/
 ENV GOPATH = ${USR_PATH}go/
+
+RUN mkdir -p ${GOPATH}
+
 ENV CONTAINER_PATH = ${USR_PATH}src/support/
 
 RUN mkdir -p ${CONTAINER_PATH}
@@ -9,7 +12,7 @@ WORKDIR ${CONTAINER_PATH}
 
 COPY . ${CONTAINER_PATH}
 
-RUN go get -u github.com/gorilla/mux && \
+RUN go get -u github.com/gorilla/mux \
     go get -u github.com/gorilla/websocket
 
 EXPOSE 8080
