--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:latest
 
 ENV GOROOT=/usr/local/go
-ENV GOPATH=$HOME/.go
+ENV GOPATH=$HOME/go
 
 RUN mkdir -p $HOME/go/src/support/
 WORKDIR $HOME/go/src/support/
@@ -13,6 +13,7 @@ RUN go get -u github.com/gorilla/websocket
 
 EXPOSE 8080
 
-RUN go build
+RUN go build $HOME/go/src/support/main/v1/tickets/ticket.go
+RUN go build main.go
 
-CMD ["go run", "&"]
+CMD ["./main", "&"]
