--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -3,10 +3,10 @@ FROM golang:latest
 ENV GOROOT=/usr/local/go
 ENV GOPATH=$HOME/go
 
-#RUN mkdir -p $GOPATH/src/support/
-#WORKDIR $GOPATH/src/support/
-#
-#COPY . $GOPATH/src/support/
+RUN mkdir -p $GOPATH/src/support/
+WORKDIR $GOPATH/src/support/
+
+COPY . $GOPATH/src/support/
 
 RUN go get -u github.com/gorilla/mux
 RUN go get -u github.com/gorilla/websocket
