--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -8,6 +8,9 @@ WORKDIR $GOPATH/src/support/
 
 COPY . $GOPATH/src/support/
 
+RUN cd /
+RUN ls
+
 RUN go get -u github.com/gorilla/mux
 RUN go get -u github.com/gorilla/websocket
 
